# kdm

./: .gitignore  README.md  best_model.keras  kdm_classification.ipynb  kdm_classification_asia_example.ipynb  kdm_classification_cachexia_example.ipynb  kdm_classification_energy_example.ipynb  kdm_classification_generation.ipynb  kdm_classification_generation_tf.ipynb  kdm_classification_iris_example.ipynb  kdm_density_estimation.ipynb  kdm_introduction.ipynb  kdm_memory.ipynb  kdm_memory_ft.ipynb  kdm_regression.ipynb  pyproject.toml  results.txt
data/: data_auto_mpg.csv  iris.csv
examples/: kdm_bin_to_continous_regress.ipynb  kdm_classification.ipynb  kdm_classification_generation.ipynb  kdm_density_estimation.ipynb  kdm_generative_regress.ipynb  kdm_generative_test.ipynb  kdm_introduction.ipynb  kdm_memory.ipynb  kdm_regression.ipynb  kdm_uncertainty.ipynb  mem_kdm_fmnist.py
examples/legacy/: kdm_classification_generation.ipynb  kdm_memory.ipynb
kdm/: __init__.py  base.py  init.py  losses.py  utils.py
kdm/layers/: __init__.py  comp_trans_kernel_layer.py  cosine_kernel_layer.py  crossproduct_kernel_layer.py  kdm_layer.py  kdm_proj_layer.py  mem_kdm_layer.py  rbf_kernel_layer.py
kdm/models/: __init__.py  kdm_class_model.py  kdm_den_est_model.py  kdm_graph_model.py  kdm_joint_den_est_model.py  kdm_regress_model.py  kdm_sequential_class_model.py  kdm_sequential_joint_class_model.py  mem_kdm_class_model.py  mem_kdm_class_model_wrapper.py  memft_kdm_class_model.py
kdm/models/mem/: __init__.py  mem_kdm_class_model.py  mem_kdm_class_model_wrapper.py
skills/kdm/: SKILL.md
skills/kdm/evals/: evals.json
skills/kdm/references/: classification.md  density_estimation.md  generative.md  kdm_layer.md  (+2 more)
tests/: conftest.py  generate_fixtures.py  generate_layer_fixtures.py  test_layers.py  test_models.py  test_utils.py
tests/fixtures/: layer_references.npz  utils_references.npz
