[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kdm-torch"
version = "2.0.0"
authors = [
    {name = "Fabio A. González", email = "fagonzalezo@unal.edu.co"},
]
description = "Probabilistic deep learning with Kernel Density Matrices (PyTorch)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["machine learning", "density matrices", "deep learning", "pytorch"]
license = {text = "GNU LGPL 2.1"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "numpy",
    "scipy",
    "scikit-learn",
]

[project.optional-dependencies]
mem = ["faiss-cpu>=1.8.0"]

[tool.setuptools.packages.find]
include = ["kdm*"]

[project.urls]
Homepage = "https://github.com/fagonzalezo/kdm.git"
Repository = "https://github.com/fagonzalezo/kdm.git"
